added frametime metric, bbox render optimization

--- a/board.html
+++ b/board.html
@@ -21,5 +21,7 @@
     <input type="button" class="btn" value="save" size="30" onclick="save()" style="bottom:40px;left:40px;">
     <input type="button" class="btn" value="save json" size="30" onclick="save_board_state()" style="bottom:40px;left:200px;">
     <input type="button" class="btn" value="clear" size="30" onclick="erase()" style="bottom:40px;left:120px;">
+    <div style="position:absolute;top:2%;right:3%;color:red;font-weight:bold" id="fps">fps: 0</div>
+    <div style="position:absolute;top:42%;right:3%;color:red;font-weight:bold" id="frametime">frametime: 0</div>
 </body>
 </html>
