--- a/board.html
+++ b/board.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Interactive board</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="manifest" href="manifest.json">
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body onload="init()">
