--- a/board.html
+++ b/board.html
@@ -5,23 +5,60 @@
     <meta charset="UTF-8">
     <title>Interactive board</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="manifest" href="manifest.json">
+    <!-- <link rel="manifest" href="manifest.json"> -->
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body onload="init()">
     <canvas id="can"></canvas>
     <div style="position:absolute;top:12%;right:3%;">Choose Color</div>
-    <div style="position:absolute;top:15%;right:5%;width:10px;height:10px;background:green;" id="green" onclick="color(this)"></div>
-    <div style="position:absolute;top:15%;right:6%;width:10px;height:10px;background:blue;" id="blue" onclick="color(this)"></div>
-    <div style="position:absolute;top:15%;right:7%;width:10px;height:10px;background:red;" id="red" onclick="color(this)"></div>
-    <div style="position:absolute;top:17%;right:5%;width:10px;height:10px;background:yellow;" id="yellow" onclick="color(this)"></div>
-    <div style="position:absolute;top:17%;right:6%;width:10px;height:10px;background:orange;" id="orange" onclick="color(this)"></div>
-    <div style="position:absolute;top:17%;right:7%;width:10px;height:10px;background:black;" id="black" onclick="color(this)"></div>
-    <div style="position:absolute;top:20%;right:3%;">Eraser</div>
-    <div style="position:absolute;top:22%;right:5%;width:15px;height:15px;background:white;border:2px solid;" id="eraser" onclick="pickeraser(this)"></div>
-    <input type="button" class="btn" value="save" size="30" onclick="save()" style="bottom:40px;left:40px;">
-    <input type="button" class="btn" value="save json" size="30" onclick="save_board_state()" style="bottom:40px;left:200px;">
-    <input type="button" class="btn" value="clear" size="30" onclick="erase()" style="bottom:40px;left:120px;">
-<!--    <div style="position:absolute;top:42%;right:3%;color:red;font-weight:bold" id="frametime">frametime: 0</div>-->
+    <div style="position:absolute;top:15%;right:5%;width:10px;height:10px;background:green;" onclick="color('green')"></div>
+    <div style="position:absolute;top:15%;right:6%;width:10px;height:10px;background:blue;" onclick="color('blue')"></div>
+    <div style="position:absolute;top:15%;right:7%;width:10px;height:10px;background:red;" onclick="color('red')"></div>
+    <div style="position:absolute;top:17%;right:5%;width:10px;height:10px;background:yellow;" onclick="color('yellow')"></div>
+    <div style="position:absolute;top:17%;right:6%;width:10px;height:10px;background:orange;" onclick="color('orange')"></div>
+    <div style="position:absolute;top:17%;right:7%;width:10px;height:10px;background:black;" onclick="color('black')"></div>
+    <script>
+        // Обновляем цвет круга при выборе цвета
+        function updateColor(input) {
+            document.querySelector('.color-input::after').style.backgroundColor = input.value;
+        }
+    </script>
+    <div class="toolbar">
+        <button class="tool-btn active" onclick="color('black')">
+            <svg width="28" height="28" viewBox="0 0 24 24">
+                <path d="M3 17.25V21h3.75l11.02-11.02-3.75-3.75L3 17.25z"></path>
+            </svg>
+        </button>
+
+        <button onclick="pickeraser(this)">Eraser</button>
+        <!-- <input type="color" value="#000000"> -->
+        <input type="color" id="colorPicker" style="display:none" onchange="color(this.value)">
+
+        <button class="tool-btn" id="brushSizeBtn" onclick="document.getElementById('colorPicker').click()">
+            <span id="brushIndicator" style="display: inline-block; background-color: #000; border-radius: 50%; width: 12px; height: 12px;"></span>
+        </button>
+
+        <button class="tool-btn" id="shapeTool">
+            <svg width="28" height="28" viewBox="0 0 24 24">
+                <path d="M3 3h18v2H3V3zm5 4h10v10H8V7zm-3 14h18v2H5v-2z"></path>
+            </svg>
+        </button>
+
+        <button class="tool-btn" id="undoTool">
+            <svg width="28" height="28" viewBox="0 0 24 24">
+                <path d="M12 5V1L4 9l8 8V11a6 6 0 0 1 6 6h2a8 8 0 0 0-8-8z"></path>
+            </svg>
+        </button>
+
+        <button class="tool-btn" id="redoTool">
+            <svg width="28" height="28" viewBox="0 0 24 24">
+                <path d="M12 5v4a8 8 0 0 1 8 8h-2a6 6 0 0 0-6-6v4l8-8z"></path>
+            </svg>
+        </button>
+
+        <button onclick="save()">Save</button>
+        <button onclick="erase()">Clear</button>
+        <button onclick="save_board_state()">Save JSON</button>
+    </div>
 </body>
 </html>
