--- a/board.html
+++ b/board.html
@@ -11,14 +11,14 @@
 <body onload="init()">
     <canvas id="can"></canvas>
     <div class="toolbar">
-        <button class="tool-btn active" onclick="color('black')">
+        <button class="tool-btn" id="tool-pencil" onclick="color('black')">
             <svg width="28" height="28" viewBox="0 0 24 24">
                 <path d="M3 17.25V21h3.75l11.02-11.02-3.75-3.75L3 17.25z"></path>
             </svg>
         </button>
 
-        <button onclick="pickeraser(this)">Eraser</button>
-        <input type="color" id="colorPicker" style="display:none" onchange="document.getElementById('brushIndicator').style.backgroundColor = this.value; color(this.value)">
+        <button class="tool-btn" onclick="pickTool('eraser')" id="tool-eraser">Eraser</button>
+        <input type="color" id="colorPicker" style="display:none" onchange="color(this.value)">
 
         <button class="tool-btn" id="brushSizeBtn" onclick="document.getElementById('colorPicker').click()">
             <span id="brushIndicator" style="display: inline-block; background-color: #000; border-radius: 50%; width: 12px; height: 12px;"></span>
