--- a/board.html
+++ b/board.html
@@ -12,8 +12,9 @@
     <canvas id="can"></canvas>
     <div class="toolbar">
         <button id="tool-pencil" onclick="pickTool('pencil')">
-            <svg width="28" height="28" viewBox="0 0 24 24">
-                <path d="M3 17.25V21h3.75l11.02-11.02-3.75-3.75L3 17.25z"></path>
+            <svg id="svg-pencil" width="28" height="28" viewBox="0 0 16 16" fill="#eeeeee">
+                <path d="M8.29289 3.70711L1 11V15H5L12.2929 7.70711L8.29289 3.70711Z"/>
+                <path d="M9.70711 2.29289L13.7071 6.29289L15.1716 4.82843C15.702 4.29799 16 3.57857 16 2.82843C16 1.26633 14.7337 0 13.1716 0C12.4214 0 11.702 0.297995 11.1716 0.828428L9.70711 2.29289Z"/>
             </svg>
         </button>
         <button onclick="pickTool('eraser')" id="tool-eraser">Eraser</button>
