ui change + two finger resize fix

--- a/board.html
+++ b/board.html
@@ -61,10 +61,10 @@
             <span id="brushIndicator" style="display: inline-block; background-color: #000; border-radius: 50%; width: 12px; height: 12px;"></span>
         </button>
         <!-- <button>SHAPE</button> -->
-        <!-- <button id="undo" onclick="undo()" disabled>UNDO</button> -->
-        <!-- <button id="redo" onclick="redo()" disabled>REDO</button> -->
-        <button id="save" onclick="save()">Save</button>
-        <button id="clear" onclick="erase()">Clear</button>
+        <button id="undo" onclick="undo()" disabled>UNDO</button>
+        <button id="redo" onclick="redo()" disabled>REDO</button>
+        <!-- <button id="save" onclick="save()">Save</button> -->
+        <!-- <button id="clear" onclick="erase()">Clear</button> -->
         <!-- <button id="json" onclick="save_board_state()">Save JSON</button> -->
     </div>
 </body>
