--- a/board.html
+++ b/board.html
@@ -64,7 +64,7 @@
         <button id="undo" onclick="undo()" disabled>UNDO</button>
         <button id="redo" onclick="redo()" disabled>REDO</button>
         <!-- <button id="save" onclick="save()">Save</button> -->
-        <button id="clear" onclick="erase()">Clear</button>
+        <button id="clear" onclick="clear_board()">Clear</button>
         <!-- <button id="json" onclick="save_board_state()">Save JSON</button> -->
     </div>
 </body>
